--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,5 +1,5 @@
 .custom-header {
-  background-color: #ffc300;
+  background-color:  #ccd9ff;
   padding: 15px 20px;
   border-radius: 25px;
   color: #000;
