--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -36,7 +36,8 @@
 }
 
 .welcome-section {
-  background: linear-gradient(to bottom right, #fff5cc, #ffe680);
+  background:#ffffe6;
+   /* linear-gradient(to bottom right, #fff5cc, #ffe680); */
   text-align: center;
 }
 
